--- a/Advertising.conf
+++ b/Advertising.conf
@@ -1,4 +1,4 @@
-hostname = *.mgtv.com, in.m.jd.com,*.migu.cn,*.miguvideo.com, edith.xiaohongshu.com, www.xiaohongshu.com, ci.xiaohongshu.com, rec.xiaohongshu.com, *.pornhub.com, 18comic.org, 18comic.vip, *.avple.tv, jable.tv, mei.tu,  mxsa.mxbc.net, *.ximalaya.com, www.zhihu.com, api.zhihu.com, zhuanlan.zhihu.com, appcloud2.zhihu.com, m-cloud.zhihu.com, api.weibo.*, *.api.weibo.*, mapi.weibo.*, new.vip.weibo.cn, boot.biz.weibo.com, creditcardapp.bankcomm.com, creditcardapp.bankcomm.cn, news.l.qq.com, btrace.qq.com, tc.qq.com, buy.itunes.apple.com, www.google.cn, *.docer.wps.cn, vipapi.wps.cn, *account.wps.cn, *account.wps.com, boxer.baidu.com, www.firefox.com.cn, api.abema.io, *.snssdk.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, api.weibo.cn, mapi.weibo.com, -lark-frontier-hl.snssdk.com, api.21jingji.com, service.4gtv.tv, app.58.com, pic?.ajkimg.com, gw.alicdn.com, heic.alicdn.com, m*.amap.com, gw.kaola.com, api-new.app.acfun.cn, api.bjxkhc.com, newclient.map.baidu.com, mime.baidu.com, -i.vip.iqiyi.com, *.iqiyi.com, manga.bilibili.com, app.api.ke.com, www.bodivis.com.cn, yxyapi*.drcuiyutao.com, app.badmintoncn.com, client.app.coc.10086.cn, m.client.10010.com, www.cntv.com, cap.caocaokeji.cn, api.caijingmobile.com, app-gw.csdn.net, m.ctrip.com, app.dewu.com, api.douban.com, rtbapi.douyucdn.cn, api.dangdang.com, e.dangdang.com, daoyu.sdo.com, capis*.didapinche.com, maicai.api.ddxq.mobi, mobileapi-v6.elong.com, i.ys7.com, www.flyertea.com, dsa-mfp.fengshows.cn, *-release.wuta-cam.com, gateway.shouqiev.com, dl.app.gtja.com, smkmp.96225.com, business.msstatic.com, imeclient.openspeech.cn, webboot.zhangyue.com, nnapp.cloudbae.cn, icc.one, jxd524.github.io, ib-soft.net, www.inoreader.com, list-app-m.i4.cn, api.jxedt.com, *.kakamobi.cn, *.kingsoft-office-service.com, api.gotokeep.com, api.kkmh.com, api.club.lenovo.cn, api.m.mi.com, api.jr.mi.com, api-mifit.huami.com, home.mi.com, api.mgzf.com, flowplus.meituan.net, capi.mwee.cn, v?-api.miaopai.com, mapi.mafengwo.cn, app.mixcapp.com, appconf.mail.163.com, interface*.music.163.com, support.you.163.com, p.du.163.com, app-api.niu.com, gfp.veta.naver.com, slapi.oray.net, pss.txffp.com, api.yangkeduo.com, api.pinduoduo.com, mrobot.pconline.com.cn, mrobot.pcauto.com.cn, open.qyer.com, media.qyer.com, api.qbb6.com, magev6.if.qidian.com, api.rr.tv, *.uve.weibo.com, weibointl.api.weibo.cn, tqt.weibo.cn, *.k.sohu.com, *.tv.sohu.com, ap*.smzdm.com, sh-gateway.shihuo.cn, gw-passenger.01zhuanche.com, mpcs.suning.com, ccsp-egmas.sf-express.com, shopic.sf-express.com, api*.futunn.com, ssl.kohsocialapp.qq.com, 4gimg.map.qq.com, r.inews.qq.com, news.ssp.qq.com, mp.weixin.qq.com, m.tuniu.com, img*.10101111cdn.com, msg.umengcloud.com, api.vuevideo.net, api.vistopia.com.cn, thor.weidian.com, api.waitwaitpay.com, api-one.wallstcn.com, api.xiachufang.com, api.xueqiu.com, promo.xueqiu.com, api.yizhibo.com, a.qiumibao.com, *.zhuishushenqi.com, syh.zybang.com, api.izuiyou.com, tiku.zhan.com, m.baidu.com, www.baidu.com, zhidao.baidu.com, app.bilibili.com, api.bilibili.com, api.live.bilibili.com, grpc.biliapi.net, *.weibo.cn, *.weibo.com, weibo.com, jzts.cmpassport.com, wallet.95516.com, weixin110.qq.com, security.wechat.com, api.alipan.com, member.alipan.com, pan.baidu.com, ndstatic.cdn.bcebos.com, staticsns.cdn.bcebos.com, issuecdn.baidupcs.com, update.pan.baidu.com, fc-video.cdn.bcebos.com, rp.hpplay.cn, creditcardapp.bankcomm.cn, creditcardapp.bankcomm.com, creditcard.bankcomm.cn, creditcard.bankcomm.com, us.l.qq.com, acs.m.taobao.com, guide-acs.m.taobao.com, cn-acs.m.cainiao.com, poplayer.template.alibaba.com, api2.helper.qq.com, *.beacon.qq.com, mi.gdt.qq.com, lives.l.qq.com, imgcache.qq.com, mtteve.beacon.qq.com, vv.video.qq.com, qt.qq.com, 3gimg.qq.com, y.gtimg.cn, splashqqlive.gtimg.com, qzonestyle.gtimg.cn, discuz.gtimg.cn, bla.gtimg.com, mmgr.gtimg.com, bk.bingo.qq.com, acs.m.goofish.com, g-acs.m.goofish.com, dinamicx.alibabausercontent.com, acs.youku.com, push.m.youku.com, un-acs.youku.com, mcmm.caiyun.feixin.10086.cn, mrp.mcloud.139.com, ad.mcloud.139.com, middle.yun.139.com, cloud.189.cn, zt-app.go189.cn, api.m.jd.com, dns.jd.com, m.360buyimg.com, bdsp-x.jd.com, dsp-x.jd.com, ms.jr.jd.com, tiebac.baidu.com, *.tieba.baidu.com
+hostname = *.mgtv.com, in.m.jd.com,*.migu.cn,*.miguvideo.com, *.xiaohongshu.com, *.pornhub.com, 18comic.org, 18comic.vip, *.avple.tv, jable.tv, mei.tu,  mxsa.mxbc.net, *.ximalaya.com, www.zhihu.com, api.zhihu.com, zhuanlan.zhihu.com, appcloud2.zhihu.com, m-cloud.zhihu.com, api.weibo.*, *.api.weibo.*, mapi.weibo.*, new.vip.weibo.cn, boot.biz.weibo.com, creditcardapp.bankcomm.com, creditcardapp.bankcomm.cn, news.l.qq.com, btrace.qq.com, tc.qq.com, buy.itunes.apple.com, www.google.cn, *.docer.wps.cn, vipapi.wps.cn, *account.wps.cn, *account.wps.com, boxer.baidu.com, www.firefox.com.cn, api.abema.io, *.snssdk.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, api.weibo.cn, mapi.weibo.com, -lark-frontier-hl.snssdk.com, api.21jingji.com, service.4gtv.tv, app.58.com, pic?.ajkimg.com, gw.alicdn.com, heic.alicdn.com, m*.amap.com, gw.kaola.com, api-new.app.acfun.cn, api.bjxkhc.com, newclient.map.baidu.com, mime.baidu.com, -i.vip.iqiyi.com, *.iqiyi.com, manga.bilibili.com, app.api.ke.com, www.bodivis.com.cn, yxyapi*.drcuiyutao.com, app.badmintoncn.com, client.app.coc.10086.cn, m.client.10010.com, www.cntv.com, cap.caocaokeji.cn, api.caijingmobile.com, app-gw.csdn.net, m.ctrip.com, app.dewu.com, api.douban.com, rtbapi.douyucdn.cn, api.dangdang.com, e.dangdang.com, daoyu.sdo.com, capis*.didapinche.com, maicai.api.ddxq.mobi, mobileapi-v6.elong.com, i.ys7.com, www.flyertea.com, dsa-mfp.fengshows.cn, *-release.wuta-cam.com, gateway.shouqiev.com, dl.app.gtja.com, smkmp.96225.com, business.msstatic.com, imeclient.openspeech.cn, webboot.zhangyue.com, nnapp.cloudbae.cn, icc.one, jxd524.github.io, ib-soft.net, www.inoreader.com, list-app-m.i4.cn, api.jxedt.com, *.kakamobi.cn, *.kingsoft-office-service.com, api.gotokeep.com, api.kkmh.com, api.club.lenovo.cn, api.m.mi.com, api.jr.mi.com, api-mifit.huami.com, home.mi.com, api.mgzf.com, flowplus.meituan.net, capi.mwee.cn, v?-api.miaopai.com, mapi.mafengwo.cn, app.mixcapp.com, appconf.mail.163.com, interface*.music.163.com, support.you.163.com, p.du.163.com, app-api.niu.com, gfp.veta.naver.com, slapi.oray.net, pss.txffp.com, api.yangkeduo.com, api.pinduoduo.com, mrobot.pconline.com.cn, mrobot.pcauto.com.cn, open.qyer.com, media.qyer.com, api.qbb6.com, magev6.if.qidian.com, api.rr.tv, *.uve.weibo.com, weibointl.api.weibo.cn, tqt.weibo.cn, *.k.sohu.com, *.tv.sohu.com, ap*.smzdm.com, sh-gateway.shihuo.cn, gw-passenger.01zhuanche.com, mpcs.suning.com, ccsp-egmas.sf-express.com, shopic.sf-express.com, api*.futunn.com, ssl.kohsocialapp.qq.com, 4gimg.map.qq.com, r.inews.qq.com, news.ssp.qq.com, mp.weixin.qq.com, m.tuniu.com, img*.10101111cdn.com, msg.umengcloud.com, api.vuevideo.net, api.vistopia.com.cn, thor.weidian.com, api.waitwaitpay.com, api-one.wallstcn.com, api.xiachufang.com, api.xueqiu.com, promo.xueqiu.com, api.yizhibo.com, a.qiumibao.com, *.zhuishushenqi.com, syh.zybang.com, api.izuiyou.com, tiku.zhan.com, m.baidu.com, www.baidu.com, zhidao.baidu.com, app.bilibili.com, api.bilibili.com, api.live.bilibili.com, grpc.biliapi.net, *.weibo.cn, *.weibo.com, weibo.com, jzts.cmpassport.com, wallet.95516.com, weixin110.qq.com, security.wechat.com, api.alipan.com, member.alipan.com, pan.baidu.com, ndstatic.cdn.bcebos.com, staticsns.cdn.bcebos.com, issuecdn.baidupcs.com, update.pan.baidu.com, fc-video.cdn.bcebos.com, rp.hpplay.cn, creditcardapp.bankcomm.cn, creditcardapp.bankcomm.com, creditcard.bankcomm.cn, creditcard.bankcomm.com, us.l.qq.com, acs.m.taobao.com, guide-acs.m.taobao.com, cn-acs.m.cainiao.com, poplayer.template.alibaba.com, api2.helper.qq.com, *.beacon.qq.com, mi.gdt.qq.com, lives.l.qq.com, imgcache.qq.com, mtteve.beacon.qq.com, vv.video.qq.com, qt.qq.com, 3gimg.qq.com, y.gtimg.cn, splashqqlive.gtimg.com, qzonestyle.gtimg.cn, discuz.gtimg.cn, bla.gtimg.com, mmgr.gtimg.com, bk.bingo.qq.com, acs.m.goofish.com, g-acs.m.goofish.com, dinamicx.alibabausercontent.com, acs.youku.com, push.m.youku.com, un-acs.youku.com, mcmm.caiyun.feixin.10086.cn, mrp.mcloud.139.com, ad.mcloud.139.com, middle.yun.139.com, cloud.189.cn, zt-app.go189.cn, api.m.jd.com, dns.jd.com, m.360buyimg.com, bdsp-x.jd.com, dsp-x.jd.com, ms.jr.jd.com, tiebac.baidu.com, *.tieba.baidu.com
 
 # > 京东比价
 ^https:\/\/in\.m\.jd\.com\/product\/graphext\/\d+\. url script-response-body https://raw.githubusercontent.com/re2/g/master/jdprice.js
@@ -14,35 +14,54 @@ hostname = *.mgtv.com, in.m.jd.com,*.migu.cn,*.miguvideo.com, edith.xiaohongshu.
 ^https://app\.c.nf\.migu\.cn/payment/watch-ad url reject-200
 
 # > 小红书
-# hostname = edith.xiaohongshu.com, www.xiaohongshu.com, ci.xiaohongshu.com, rec.xiaohongshu.com
-# 惊喜弹窗
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/surprisebox\/(get_style|open|submit_action) url reject-dict
-^https?:\/\/www\.xiaohongshu\.com\/api\/marketing\/box\/trigger\? url reject-dict
-# 信息流
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/guide\? url reject-dict
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/guide\/user_banner url reject-dict
-^https?:\/\/www\.xiaohongshu\.com\/api\/sns\/(v\d\/ads\/resource|v\d\/hey\/\w+\/hey_gallery) url reject-dict
-# 搜索页
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/search\/(banner_list|hot_list) url script-response-body https://raw.githubusercontent.com/re2/g/master/xiaohongshu.js
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/search\/(hint|trending)\? url script-response-body https://raw.githubusercontent.com/re2/g/master/xiaohongshu.js
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/search\/notes\? url script-response-body https://raw.githubusercontent.com/re2/g/master/xiaohongshu.js
-# 开屏广告
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/system_service\/config\? url script-response-body https://raw.githubusercontent.com/re2/g/master/xiaohongshu.js
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/system_service\/splash_config url script-response-body https://raw.githubusercontent.com/re2/g/master/xiaohongshu.js
-# 详情页,小部件
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/widgets url script-response-body https://raw.githubusercontent.com/re2/g/master/xiaohongshu.js
-#^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/user\/followings\/followfeed url script-response-body https://raw.githubusercontent.com/re2/g/master/xiaohongshu.js
-#^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/recommend\/user\/follow_recommend\? url script-response-body https://raw.githubusercontent.com/re2/g/master/xiaohongshu.js
-# 图片水印,视频水印
-^https?:\/\/(edith|rec|www)\.xiaohongshu\.com\/api\/sns\/v\d\/note\/(imagefeed|live_photo\/save) url script-response-body https://raw.githubusercontent.com/re2/g/master/xiaohongshu.js
-^https?:\/\/(edith|rec|www)\.xiaohongshu\.com\/api\/sns\/v\d\/(followfeed|homefeed)\? url script-response-body https://raw.githubusercontent.com/re2/g/master/xiaohongshu.js
-^https?:\/\/(edith|rec|www)\.xiaohongshu\.com\/api\/sns\/(v2\/note\/feed|v3\/note\/videofeed)\? url script-response-body https://raw.githubusercontent.com/re2/g/master/xiaohongshu.js
-^https?:\/\/(edith|rec|www)\.xiaohongshu\.com\/api\/sns\/(v4\/note\/videofeed|v10\/note\/video\/save)\? url script-response-body https://raw.githubusercontent.com/re2/g/master/xiaohongshu.js
-# 评论区用户id置空 (实验功能可能无效)
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/comment\/list url response-body red_id response-body fmz200
-# 评论区图片水印 (实验功能可能无效)
-^https?:\/\/ci\.xiaohongshu\.com\/system_config\/watermark url reject-img
-
+# > 小红书_热门视频流@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/note\/tabfeed url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_视频保存[new]@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/note\/video\/save url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_评论区图片处理@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/note\/comment\/list url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_Live图片去水印@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/note\/live_photo\/save url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_通用广告请求@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/system_service\/splash url reject-200
+# > 小红书_搜索结果推荐广告@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/search\/notes\? url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_视频播放页商品推广@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/note\/widgets url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_短视频流去水印+强制开启保存功能@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/note\/redtube\? url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_信息流视频去水印+强制开启保存功能@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/note\/videofeed\? url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_信息流图片去水印@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/note\/feed\? url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_信息流图片[部分用户是下面请求]去水印@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/note\/imagefeed url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_开屏广告@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/system_service\/splash_config url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_首页瀑布流@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/homefeed\? url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_启动处理@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/system_service\/config\? url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_热搜发现@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/search\/hot_list url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_默认填词@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/search\/hint url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_去除购物@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/homefeed\/categories url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_猜你想搜@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/search\/trending url script-response-body https://raw.githubusercontent.com/re2/g/master/redbook_json.js
+# > 小红书_通用广告请求@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/gslb url reject-200
+# > 小红书_通用广告请求@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/(tag\/)?ads url reject-200
+# > 小红书_隐私屏蔽@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/v\d+\/stateReport url reject-200
+# > 小红书_Switches@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/data\/native\/matrix_switches url reject-200
+# > 小红书_青少年请求@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/user\/teenager\/status url reject-200
+# > 小红书_启动引导@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d+\/guide\/home_guide url reject-200
 # >计步器 StepsApp（恢复购买）
 ;^https?:\/\/api.revenuecat.com\/v1\/(receipts|subscribers).*$ url script-response-body https://raw.githubusercontent.com/re2/g/master/stepsapp.js
 
@@ -245,6 +264,11 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 ^https:\/\/asserts\.avple\.tv\/file\/avple-images\/ad\.js url reject
 # Jable (https://jable.tv/) //jable.tv
 ^https:\/\/(\w{0,3}(\.){0,1}(jable)(\.)\w{0,3})(?!.*?(\/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|php|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/re2/g/master/Adblock4limboQX.js
+
+# missav 播放页弹窗 (https://missav.com/) //missav.com
+^https:\/\/missav\.com\/(dm\d+\/)?\w{2}\/[\w-]+ url script-response-body https://raw.githubusercontent.com/re2/g/master/myBlockAds.js
+^https:\/\/missav\.ws\/(dm\d+\/)?\w{2}\/[\w-]+ url script-response-body https://raw.githubusercontent.com/re2/g/master/myBlockAds.js
+
 
 # ---(By blackmatrix7)---
 # 哲也同学
