--- a/Advertising.conf
+++ b/Advertising.conf
@@ -1,7 +1,32 @@
-hostname = *.githubusercontent.com, github.com, wx.17u.cn,web.meituan.com,npay.meituan.com, wmapi.meituan.com, *.mgtv.com, in.m.jd.com,*.migu.cn,*.miguvideo.com, *.xiaohongshu.com, *.pornhub.com, 18comic.org, 18comic.vip, *.avple.tv, jable.tv, mei.tu,  mxsa.mxbc.net, *.ximalaya.com, www.zhihu.com, api.zhihu.com, zhuanlan.zhihu.com, appcloud2.zhihu.com, m-cloud.zhihu.com, api.weibo.*, *.api.weibo.*, mapi.weibo.*, new.vip.weibo.cn, boot.biz.weibo.com, creditcardapp.bankcomm.com, creditcardapp.bankcomm.cn, news.l.qq.com, btrace.qq.com, tc.qq.com, www.google.cn, *.docer.wps.cn, vipapi.wps.cn, *account.wps.cn, *account.wps.com, boxer.baidu.com, www.firefox.com.cn, api.abema.io, *.snssdk.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, api.weibo.cn, mapi.weibo.com, -lark-frontier-hl.snssdk.com, api.21jingji.com, service.4gtv.tv, app.58.com, pic?.ajkimg.com, gw.alicdn.com, heic.alicdn.com, m*.amap.com, gw.kaola.com, api-new.app.acfun.cn, api.bjxkhc.com, newclient.map.baidu.com, mime.baidu.com, -i.vip.iqiyi.com, *.iqiyi.com, manga.bilibili.com, app.api.ke.com, www.bodivis.com.cn, yxyapi*.drcuiyutao.com, app.badmintoncn.com, client.app.coc.10086.cn, m.client.10010.com, www.cntv.com, cap.caocaokeji.cn, api.caijingmobile.com, app-gw.csdn.net, m.ctrip.com, app.dewu.com, api.douban.com, rtbapi.douyucdn.cn, api.dangdang.com, e.dangdang.com, daoyu.sdo.com, capis*.didapinche.com, maicai.api.ddxq.mobi, mobileapi-v6.elong.com, i.ys7.com, www.flyertea.com, dsa-mfp.fengshows.cn, *-release.wuta-cam.com, gateway.shouqiev.com, dl.app.gtja.com, smkmp.96225.com, business.msstatic.com, imeclient.openspeech.cn, webboot.zhangyue.com, nnapp.cloudbae.cn, icc.one, jxd524.github.io, ib-soft.net, www.inoreader.com, list-app-m.i4.cn, api.jxedt.com, *.kakamobi.cn, *.kingsoft-office-service.com, api.gotokeep.com, api.kkmh.com, api.club.lenovo.cn, api.m.mi.com, api.jr.mi.com, api-mifit.huami.com, home.mi.com, api.mgzf.com, flowplus.meituan.net, capi.mwee.cn, v?-api.miaopai.com, mapi.mafengwo.cn, app.mixcapp.com, appconf.mail.163.com, interface*.music.163.com, support.you.163.com, p.du.163.com, app-api.niu.com, gfp.veta.naver.com, slapi.oray.net, pss.txffp.com, api.yangkeduo.com, api.pinduoduo.com, mrobot.pconline.com.cn, mrobot.pcauto.com.cn, open.qyer.com, media.qyer.com, api.qbb6.com, magev6.if.qidian.com, api.rr.tv, *.uve.weibo.com, weibointl.api.weibo.cn, tqt.weibo.cn, *.k.sohu.com, *.tv.sohu.com, ap*.smzdm.com, sh-gateway.shihuo.cn, gw-passenger.01zhuanche.com, mpcs.suning.com, ccsp-egmas.sf-express.com, shopic.sf-express.com, api*.futunn.com, ssl.kohsocialapp.qq.com, 4gimg.map.qq.com, r.inews.qq.com, news.ssp.qq.com, mp.weixin.qq.com, m.tuniu.com, img*.10101111cdn.com, msg.umengcloud.com, api.vuevideo.net, api.vistopia.com.cn, thor.weidian.com, api.waitwaitpay.com, api-one.wallstcn.com, api.xiachufang.com, api.xueqiu.com, promo.xueqiu.com, api.yizhibo.com, a.qiumibao.com, *.zhuishushenqi.com, syh.zybang.com, api.izuiyou.com, tiku.zhan.com, m.baidu.com, www.baidu.com, zhidao.baidu.com, app.bilibili.com, api.bilibili.com, api.live.bilibili.com, grpc.biliapi.net, *.weibo.cn, *.weibo.com, weibo.com, jzts.cmpassport.com, wallet.95516.com, weixin110.qq.com, security.wechat.com, api.alipan.com, member.alipan.com, pan.baidu.com, 180.76.76.200, 180.76.76.112, ndstatic.cdn.bcebos.com, staticsns.cdn.bcebos.com, issuecdn.baidupcs.com, update.pan.baidu.com, fc-video.cdn.bcebos.com, rp.hpplay.cn, creditcardapp.bankcomm.cn, creditcardapp.bankcomm.com, creditcard.bankcomm.cn, creditcard.bankcomm.com, us.l.qq.com, acs.m.taobao.com, guide-acs.m.taobao.com, cn-acs.m.cainiao.com, poplayer.template.alibaba.com, api2.helper.qq.com, *.beacon.qq.com, mi.gdt.qq.com, lives.l.qq.com, imgcache.qq.com, mtteve.beacon.qq.com, vv.video.qq.com, qt.qq.com, 3gimg.qq.com, y.gtimg.cn, splashqqlive.gtimg.com, qzonestyle.gtimg.cn, discuz.gtimg.cn, bla.gtimg.com, mmgr.gtimg.com, bk.bingo.qq.com, acs.m.goofish.com, g-acs.m.goofish.com, dinamicx.alibabausercontent.com, acs.youku.com, push.m.youku.com, un-acs.youku.com, mcmm.caiyun.feixin.10086.cn, mrp.mcloud.139.com, ad.mcloud.139.com, middle.yun.139.com, cloud.189.cn, zt-app.go189.cn, api.m.jd.com, dns.jd.com, m.360buyimg.com, bdsp-x.jd.com, dsp-x.jd.com, ms.jr.jd.com, tiebac.baidu.com, *.tieba.baidu.com
+hostname = *.githubusercontent.com, github.com, wx.17u.cn,web.meituan.com,npay.meituan.com, wmapi.meituan.com, *.mgtv.com, in.m.jd.com,*.migu.cn,*.miguvideo.com, *.xiaohongshu.com, *.pornhub.com, 18comic.org, 18comic.vip, *.avple.tv, jable.tv, mei.tu,  mxsa.mxbc.net, *.ximalaya.com, www.zhihu.com, api.zhihu.com, zhuanlan.zhihu.com, appcloud2.zhihu.com, m-cloud.zhihu.com, api.weibo.*, *.api.weibo.*, mapi.weibo.*, new.vip.weibo.cn, boot.biz.weibo.com, creditcardapp.bankcomm.com, creditcardapp.bankcomm.cn, news.l.qq.com, btrace.qq.com, tc.qq.com, www.google.cn, *.docer.wps.cn, vipapi.wps.cn, *account.wps.cn, *account.wps.com, boxer.baidu.com, www.firefox.com.cn, api.abema.io, *.snssdk.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, api.weibo.cn, mapi.weibo.com, -lark-frontier-hl.snssdk.com, api.21jingji.com, service.4gtv.tv, app.58.com, pic?.ajkimg.com, gw.alicdn.com, heic.alicdn.com, m*.amap.com, gw.kaola.com, api-new.app.acfun.cn, api.bjxkhc.com, newclient.map.baidu.com, mime.baidu.com, -i.vip.iqiyi.com, *.iqiyi.com, manga.bilibili.com, app.api.ke.com, www.bodivis.com.cn, yxyapi*.drcuiyutao.com, app.badmintoncn.com, client.app.coc.10086.cn, m.client.10010.com, www.cntv.com, cap.caocaokeji.cn, api.caijingmobile.com, app-gw.csdn.net, m.ctrip.com, app.dewu.com, api.douban.com, rtbapi.douyucdn.cn, api.dangdang.com, e.dangdang.com, daoyu.sdo.com, capis*.didapinche.com, maicai.api.ddxq.mobi, mobileapi-v6.elong.com, i.ys7.com, www.flyertea.com, dsa-mfp.fengshows.cn, *-release.wuta-cam.com, gateway.shouqiev.com, dl.app.gtja.com, smkmp.96225.com, business.msstatic.com, imeclient.openspeech.cn, webboot.zhangyue.com, nnapp.cloudbae.cn, icc.one, jxd524.github.io, ib-soft.net, www.inoreader.com, list-app-m.i4.cn, api.jxedt.com, *.kakamobi.cn, *.kingsoft-office-service.com, api.gotokeep.com, api.kkmh.com, api.club.lenovo.cn, api.m.mi.com, api.jr.mi.com, api-mifit.huami.com, home.mi.com, api.mgzf.com, flowplus.meituan.net, capi.mwee.cn, v?-api.miaopai.com, mapi.mafengwo.cn, app.mixcapp.com, appconf.mail.163.com, interface*.music.163.com, support.you.163.com, p.du.163.com, app-api.niu.com, gfp.veta.naver.com, slapi.oray.net, pss.txffp.com, api.yangkeduo.com, api.pinduoduo.com, mobile.yangkeduo.com, mrobot.pconline.com.cn, mrobot.pcauto.com.cn, open.qyer.com, media.qyer.com, api.qbb6.com, magev6.if.qidian.com, api.rr.tv, *.uve.weibo.com, weibointl.api.weibo.cn, tqt.weibo.cn, *.k.sohu.com, *.tv.sohu.com, ap*.smzdm.com, sh-gateway.shihuo.cn, gw-passenger.01zhuanche.com, mpcs.suning.com, ccsp-egmas.sf-express.com, shopic.sf-express.com, api*.futunn.com, ssl.kohsocialapp.qq.com, 4gimg.map.qq.com, r.inews.qq.com, news.ssp.qq.com, mp.weixin.qq.com, m.tuniu.com, img*.10101111cdn.com, msg.umengcloud.com, api.vuevideo.net, api.vistopia.com.cn, thor.weidian.com, api.waitwaitpay.com, api-one.wallstcn.com, api.xiachufang.com, api.xueqiu.com, promo.xueqiu.com, api.yizhibo.com, a.qiumibao.com, *.zhuishushenqi.com, syh.zybang.com, api.izuiyou.com, tiku.zhan.com, m.baidu.com, www.baidu.com, zhidao.baidu.com, app.bilibili.com, api.bilibili.com, api.live.bilibili.com, grpc.biliapi.net, *.weibo.cn, *.weibo.com, weibo.com, jzts.cmpassport.com, wallet.95516.com, weixin110.qq.com, security.wechat.com, api.alipan.com, member.alipan.com, pan.baidu.com, 180.76.76.200, 180.76.76.112, ndstatic.cdn.bcebos.com, staticsns.cdn.bcebos.com, issuecdn.baidupcs.com, update.pan.baidu.com, fc-video.cdn.bcebos.com, rp.hpplay.cn, creditcardapp.bankcomm.cn, creditcardapp.bankcomm.com, creditcard.bankcomm.cn, creditcard.bankcomm.com, us.l.qq.com, acs.m.taobao.com, guide-acs.m.taobao.com, cn-acs.m.cainiao.com, poplayer.template.alibaba.com, api2.helper.qq.com, *.beacon.qq.com, mi.gdt.qq.com, lives.l.qq.com, imgcache.qq.com, mtteve.beacon.qq.com, vv.video.qq.com, qt.qq.com, 3gimg.qq.com, y.gtimg.cn, splashqqlive.gtimg.com, qzonestyle.gtimg.cn, discuz.gtimg.cn, bla.gtimg.com, mmgr.gtimg.com, bk.bingo.qq.com, acs.m.goofish.com, g-acs.m.goofish.com, dinamicx.alibabausercontent.com, acs.youku.com, push.m.youku.com, un-acs.youku.com, mcmm.caiyun.feixin.10086.cn, mrp.mcloud.139.com, ad.mcloud.139.com, middle.yun.139.com, cloud.189.cn, zt-app.go189.cn, api.m.jd.com, dns.jd.com, m.360buyimg.com, bdsp-x.jd.com, dsp-x.jd.com, ms.jr.jd.com, tiebac.baidu.com, *.tieba.baidu.com, elife.icbc.com.cn, pv.elife.icbc.com.cn, v.icbc.com.cn, aag.enmonster.com, open-cms-api.uc.cn, open-cms-api.quark.cn, cdb.meituan.com midc.cdn-static.abchina.com.cn, enjoy.cdn-static.abchina.com, image.spdbccc.com.cn, webappcfg.paas.cmbchina.com, mbmodule-openapi.paas.cmbchina.com, mbasecc.bas.cmbchina.com, mbasecc.bcs.cmbchina.com, intellicc.bas.cmbchina.com, intellicc.bcs.cmbchina.com, yunbusiness.ccb.com
 
 ^https://.*\.githubusercontent\.com\/ url request-header (\r\n)Accept-Language:.+(\r\n) request-header $1Accept-Language: en-us$2
 ^https:\/\/github\.com\/ url request-header (\r\n)Accept-Language:.+(\r\n) request-header $1Accept-Language: en-us$2
+
+# > 浦大喜奔
+# hostname = image.spdbccc.com.cn
+^https?:\/\/image\.spdbccc\.com\.cn\/group\d\/M00\/[A-Z0-9]{2}\/[A-Z0-9]{2}\/.+(4038|0571|M511|V-008|g549|b0628|fg817|5w501|Jo341|Z4583|oo845|i4905|MY245|YU472|Y401|w428|s000) url reject-dict
+
+# > 建行生活
+# hostname = yunbusiness.ccb.com
+# 首页横幅广告
+^https?:\/\/yunbusiness\.ccb\.com\/clp_service\/txCtrl\?txcode=A3341A(002|006|009|119|120) url reject-200
+^https?:\/\/yunbusiness\.ccb\.com\/clp_service\/txCtrl\?txcode=A3341C147 url reject-200
+^https?:\/\/yunbusiness\.ccb\.com\/basic_service\/txCtrl\?txcode=A3341AB04 url script-response-body https://raw.githubusercontent.com/re2/g/refs/heads/master/ccbLifeAds.js
+# 删除首页+金融+我的多个横幅等乱七八糟的广告
+^https?:\/\/yunbusiness\.ccb\.com\/basic_service\/txCtrl\?txcode=A3341AB05 url echo-response application/json echo-response https://raw.githubusercontent.com/re2/g/refs/heads/master/A3341AB05.json
+# 我的页面悬浮广告
+^https?:\/\/yunbusiness\.ccb\.com\/basic_service\/txCtrl\? url response-body "TAG_AD_INFO" response-body "fmz200"
+
+# > 美团充电宝小程序
+# hostname = cdb.meituan.com
+^https?:\/\/cdb\.meituan\.com\/marketing\/source\/getPageSlotList url reject-dict
+
+# > 农业银行
+# hostname = midc.cdn-static.abchina.com.cn, enjoy.cdn-static.abchina.com
+^https?:\/\/midc\.cdn-static\.abchina\.com\.cn\/distributecenterimg\/file\/download\/(?!bbc2|f015|1655|0992|4678|a194|d8e2|c513|e51c|0ee1|166e|05ca|c882|d5b8|22ed|a0dc|a55a|6f89|3bf9|3c71|52ec|5b62|ve7a|001c|923d|accf|4a10|0bd7|be7a|5b62|5dd6|1f24|006c|775d|bd02|b983|5251|806b|d119|db14|43c9|41d3|8570|2c10|85ea|1435|814e|f422|aec7|738c|d7c8|0538|02b4|fd20|7647|f6ef|07c5|885b|e4cb|685b|30aa|c23b|9603|f27f|eaf8|8011|a5eb|409d|724c|3f2a|e07f|6744|60a6|158c|8ce3) url reject-dict
+^https?:\/\/enjoy\.cdn-static\.abchina\.com\/yx-engine-web\/file\/download\/(?!7dc2|fe96|cea3|06a8|1b11|d57b|6918|61db|2d58|aa23|) url reject-200
+^https?:\/\/firefly\.abchina\.com\.cn\/firefly-collection\/Collect url reject-200
 
 # > 京东比价
 ;^https:\/\/in\.m\.jd\.com\/product\/graphext\/\d+\. url script-response-body https://raw.githubusercontent.com/re2/g/master/jdprice.js
@@ -675,6 +700,24 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 # > Guotai Junan Securities - dl.app.gtja.com
 ^https?:\/\/dl\.app\.gtja\.com\/dzswem\/kvController\/[\w\/]+\.jpg$ url reject
 
+# > 工商银行
+# hostname = v.icbc.com.cn
+# 如开启可自行添加主机名
+^https?:\/\/v\.icbc\.com\.cn\/userfiles\/Resources\/WAP\/advertisement\/ url reject-200
+
+# > 工银E生活
+# hostname = pv.elife.icbc.com.cn
+^https?:\/\/pv\.elife\.icbc\.com\.cn\/OFSTPV\/utm\.gif url reject-200
+
+# > 工银e生活小程序
+# hostname = elife.icbc.com.cn
+# 如开启可自行添加主机名
+^https?:\/\/elife\.icbc\.com\.cn\/OFSTNEWBASE\/floorinfo\/getMantlePages\.do url reject-200
+
+# > 怪兽充电 微信小程序
+# hostname = aag.enmonster.com
+^https?:\/\/aag\.enmonster\.com\/apa\/index\/advert\/skin url reject
+
 # H
 # > HangZhou CityzenCard - smkmp.96225.com
 ^https?:\/\/smkmp\.96225.com\/smkcenter\/ad/ url reject
@@ -723,6 +766,11 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 ^https?:\/\/api\.gotokeep\.com\/op-engine-webapp\/v\d\/ad url reject
 # > Kuaikan Comics - api.kkmh.com
 ^https?:\/\/api\.kkmh\.com\/v\d+\/(ad|advertisement)\/ url reject
+
+# > 夸克
+# hostname = open-cms-api.uc.cn, open-cms-api.quark.cn
+^https?:\/\/open-cms-api\.(uc|quark)\.cn\/open-cms url script-response-body 
+https://raw.githubusercontent.com/re2/g/refs/heads/master/quark.js
 
 # L
 # > LaiFeng
@@ -817,8 +865,12 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 # P
 # > PiaoGen - pss.txffp.com
 ^https?:\/\/pss\.txffp\.com\/piaogen\/images\/launchScreen/ url reject
-# > Pinduoduo - api.yangkeduo.com,api.pinduoduo.com
+# > 拼多多
+# hostname = api.pinduoduo.com, api.yangkeduo.com, mobile.yangkeduo.com
 ^https?:\/\/api\.(pinduoduo|yangkeduo)\.com\/api\/cappuccino\/splash url reject
+^https?:\/\/api\.pinduoduo\.com\/api\/aquarius\/hungary\/global\/homepage\? url reject-dict
+# 多多买菜 开屏广告
+^https?:\/\/mobile\.yangkeduo\.com\/proxy\/api\/api\/express\/post\/waybill\/red_packet\/goods_list$ url response-body "list":\[.+\] response-body "list":[]
 # > PeanutWiFi
 ^https?:\/\/cmsapi\.wifi8\.com\/v\d\/(emptyAd|adNew)\/ url reject
 # > PConline - mrobot.pconline.com.cn,mrobot.pcauto.com.cn
@@ -996,7 +1048,7 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 # > 闲鱼
 # hostname = acs.m.goofish.com, g-acs.m.goofish.com, dinamicx.alibabausercontent.com
 # 拦截广告下发
-
+^http:\/\/amdc\.m\.taobao\.com\/amdc\/mobileDispatch %E9%97%B2%E9%B1%BC* url-and-header reject
 # 首页顶部标签
 ^https:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop\.taobao\.idle\.home\.whale\.modulet\/ url script-response-body https://raw.githubusercontent.com/re2/g/master/xianyu_ads.js
 # 搜索栏填充词
@@ -1059,6 +1111,22 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 ^https?:\/\/api\.izuiyou\.com\/ad\/ url reject
 # > Zhan - tiku.zhan.com
 ^https?:\/\/tiku\.zhan\.com\/Common\/newAd\/ url reject
+# > 招商银行
+# hostname = webappcfg.paas.cmbchina.com, mbmodule-openapi.paas.cmbchina.com
+# 开屏广告
+^https?:\/\/webappcfg\.paas\.cmbchina\.com\/v\d\/func\/getmarketconfig url reject-200
+# 首页横幅广告
+^https?:\/\/mbmodule-openapi\.paas\.cmbchina\.com\/graphic\/v2\/module\/graphic url reject-dict
+
+# > 掌上生活
+# hostname = mbasecc.bas.cmbchina.com, mbasecc.bcs.cmbchina.com, intellicc.bas.cmbchina.com, intellicc.bcs.cmbchina.com
+# 开屏广告
+^https?:\/\/mbasecc\.(bas|bcs)\.cmbchina\.com\/Edge\/api\/mlife\.clientface\.clientservice\.api\.advertiseService\/preCacheAdvertiseSec url reject-dict
+# 设置栏目内广告
+^https?:\/\/intellicc\.bas\.cmbchina\.com\/Edge\/api\/mlife\.intelli\.render\.api\.render\/getDynamicDataSec url reject
+# 首页随机弹窗
+^https?:\/\/intellicc\.bcs\.cmbchina\.com\/Edge\/api\/mlife\.intelli\.adrender\.api\.AdWork\/getAdsBySlotId url reject-dict
+
 # ------
 # Redirect Google Search Service
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
