--- a/Advertising.conf
+++ b/Advertising.conf
@@ -637,7 +637,7 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 ^https?:\/\/m\.client\.10010\.com\/mobileService\/customer\/accountListData\.htm url reject
 ^https?:\/\/m\.client\.10010\.com\/uniAdmsInterface\/getWelcomeAd url reject
 # > 热搜词@ddgksf2013
-^https?:\/\/m\.client\.10010\.com\/search_service\/search\/searchScrollWord url jsonjq-response-body '.["113000004"]=[]'
+;^https?:\/\/m\.client\.10010\.com\/search_service\/search\/searchScrollWord url jsonjq-response-body '.["113000004"]=[]'
 # > 首页底部ICON@ddgksf2013
 ^https?:\/\/m\.client\.10010\.com\/clientIndex\/homefusion\/fuInter url jsonjq-response-body 'del(.["HomeFusion.backGroundQuery"], .["HomeFusion.bottomLabel"].bottomMallKey)'
 # > 广告推送@ddgksf2013
